--- a/client/src/components/FoodItem/FoodItem.css
+++ b/client/src/components/FoodItem/FoodItem.css
@@ -17,7 +17,8 @@
 
 .food-item-name-rating{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    gap:5px;
     margin-bottom: 10px;
 }
 
