--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -27,9 +27,13 @@ hr{
   display: flex;
 }
 
+@media (max-width: 650px){
+  .app-content{
+    flex-direction: column;
+  }}
+
 .flex-col{
   display: flex;
   flex-direction: column;
   gap: 10px;
-  /* border: 1px solid blue */
 }
