--- a/admin/src/Pages/List/List.css
+++ b/admin/src/Pages/List/List.css
@@ -18,7 +18,12 @@
     color: white;
     cursor: pointer;
 }
-@media (max-width: 600px) {
+@media (max-width: 650px) {
+    .list{
+        width: 90%;
+        /* border: 4px solid red; */
+        margin: 50px auto 0;
+    }
     .list-table-format{
         grid-template-columns: 1fr 1fr 1fr 0.5fr;
         gap: 15px;
