--- a/admin/src/Pages/Order/Order.css
+++ b/admin/src/Pages/Order/Order.css
@@ -27,7 +27,7 @@
     outline: none;
     /* font-size: 10px; */
 }
-@media (max-width: 1000px){
+@media (max-width: 850px){
     .order-item{
         font-size: 12px;
         grid-template-columns: 0.5fr 2fr 1fr;
@@ -39,5 +39,21 @@
     }
     .order-item img{
         width: 40px;
+    }
+}
+
+@media (max-width: 650px){
+    .order{
+        /* border: 4px solid red; */
+        width: 90%;
+        margin: 50px auto;
+    }
+}
+
+@media (max-width:350px) {
+    .order-item{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
     }
 }
